--- a/src/test.html
+++ b/src/test.html
@@ -9,10 +9,14 @@
 	    
 	</body>
 	<script type="text/javascript">
-		function test(b=0,a){
-			console.log(a)
-			console.log('b:'+b)
+		let a = {
+			test:1,
+			test2: '你好'
 		}
-		test(a=11)
+		let b = {
+			test3:'',
+		}
+		b=a
+		console.log(b)
 	</script>
 </html>
